# Playbook

.claude/hackathon/: .gitignore  Agreement_Intelligence_Platform_Technical.pptx  README.md  RUN_RESULTS.md  api_server.py  api_server_v2.py  app.py  config.py  environment-gpu.yml  nohup.out  ontology_explorer.html  overview.md  pyproject.toml  requirements.txt  server.py  setup.sh
.claude/hackathon/core/: blob_snapshot.py  chunker.py  clause_deviation.py  clause_embedder.py  clause_pipeline.py  cluster_advisor.py  cluster_assigner.py  cluster_pipeline.py  composite.py  context_graph.py  cuml_wrappers.py  embedder.py  evoc_pipeline.py  extractor.py  field_discovery.py  field_normalizer.py  gemini_client.py  gpu_pipeline.py  intent_extractor.py  keybert_scorer.py  knowledge_graph.py  lancedb_store.py  late_interaction_retriever.py  latent_briefing.py  llm_client.py  llm_summarizer.py  macro_clusterer.py  minimal_pipeline.py  nupunkt_chunker.py  pdf_parser.py  pdf_pipeline.py  personalization_injector.py  pg_store.py  pipeline.py  playbook.py  rag_extractor.py  ray_optimizer.py  relationship_layer.py  risk_scorer.py  rlm_v2_dspy.py  (+5 more)
.claude/hackathon/cuad_html/: comparison.html  dashboard.html  hierarchy_explorer.html
.claude/hackathon/docs/: ALGORITHM_COMPARISON.md  ALGORITHM_COMPARISON_v1.md  ARCHITECTURE_REVIEW.md  CONFIDENCE_GATING_AND_PRUNING.md  COST_ANALYSIS.md  FEEDBACK_INTEGRATION_PLAN.md  FRONTEND_API_SPEC.md  FRONTEND_API_TEMPORAL_MICROSERVICES_DESIGN.md  KEYBERT_ARM_NUPUNKT_INTEGRATION.md  PERFORMANCE_DELTA_REPORT.md  PG_PROVISIONING_REQUEST.md  PIPELINE_COMPARISON.md  PIPELINE_COMPARISON_v1.md  QUALITY_LATENCY_LEVERS.md  RETRIEVER_CHANGES.md  RLM_V3_BACKLOG.md  TEMPORAL_DECOMPOSITION_PLAN.md  architecture_analysis_v2.md  clause_deviation_detection_design.md  extraction_comparison_results.md  pipeline_design.md  pipeline_design_v2.md  unified_pipeline_eval.md
.claude/hackathon/eval/: GOLD_SET_STRATEGY.md  __init__.py  __main__.py  baseline_cuad.json  baseline_results.json  bootstrap.py  gold_standard_cuad.json  playbook_eval.py  regression.py  report.json  report.md  report_cuad.json  report_cuad.md  report_with_gold.json  report_with_gold.md  runner.py  system_metrics.py
.claude/hackathon/prompts/: cluster_label.txt  field_discovery.txt  field_discovery_arm.txt  field_extraction_arm_conditioned.txt  field_extraction_conditioned.txt  field_extraction_generic.txt  macro_cluster_label.txt
.claude/hackathon/scripts/: agentic_extractions.py  build_presentation.py  check_perf_status.sh  compare_field_discovery.py  compare_rlm_vs_rlm_lb.py  compare_runs.py  export_playbook.py  extraction_value_comparison.py  extraction_value_comparison_clause.py  extraction_value_comparison_v2.py  extraction_value_comparison_v2_standalone.py  generate_comparison_data.py  generate_demo_dashboard.py  generate_hierarchy_data.py  generate_viz_data.py  inspect_db.py  llm_judge_eval.py  migrate_benchmarks_to_playbook.py  ontology_evolution.py  prep_demo_data.py  rag_extraction.py  recluster_with_layers.py  resume_cuad.py  rlm_full_pipeline.py  run_analytics.py  run_combined_pipeline.py  run_dspy_comparison.py  run_full_458.py  run_full_pipeline.py  run_full_v2.py  run_full_v3.py  run_full_v4.py  run_full_v5.py  run_mini_top30.py  run_pipeline.py  (+8 more)
(+100 files in other folders)
