[tool.poetry]
name = "clustering-v2-hackathon"
version = "0.1.0"
description = "Clustering V2 Hackathon MVP — local-first agreement intelligence pipeline"
authors = ["Clustering Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

# ── Core ML ────────────────────────────────────────────────────────────────────
sentence-transformers = ">=2.2.0"   # Local embeddings (MiniLM CPU + Nomic GPU)
bertopic = ">=0.16.0"               # Topic modeling (same as V1, applied per-domain)
umap-learn = ">=0.5.0"              # Dimensionality reduction (CPU fallback)
hdbscan = ">=0.8.33"                # Density clustering (CPU fallback)
scikit-learn = ">=1.3.0"            # ML utilities
faiss-cpu = ">=1.7.4"               # Dense vector search (CPU fallback for hybrid retrieval)
rank-bm25 = ">=0.2.2"               # BM25 sparse search (NEW — V1 has no keyword search)
numpy = ">=1.24.0"
torch = ">=2.0.0"                    # PyTorch (required for GPU embeddings)
einops = ">=0.7.0"                   # Required by Nomic model architecture

# ── GPU Acceleration (cuML via RAPIDS) ─────────────────────────────────────────
# NOTE: cuml, cudf, cupy require conda install (RAPIDS doesn't ship on PyPI).
# Install via: conda install -c rapidsai -c conda-forge -c nvidia cuml=24.06 cudf=24.06
# These are optional — the pipeline falls back to CPU UMAP/HDBSCAN gracefully.

# ── Optimization ───────────────────────────────────────────────────────────────
optuna = ">=3.4.0"                   # Bayesian optimization (sequential fallback)
ray = {version = ">=2.9.0", extras = ["tune"]}   # Distributed parallel optimization

# ── LLM ────────────────────────────────────────────────────────────────────────
openai = ">=1.12.0"                  # Direct LLM calls (replaces AIFlow gRPC proxy)
tiktoken = ">=0.5.0"                 # Token counting

# ── Storage ────────────────────────────────────────────────────────────────────
duckdb = ">=0.10.0"                  # Local analytical DB (replaces AIDB + Azure Blob + Redis)
lancedb = ">=0.5.0"                  # Persistent vector store (replaces FAISS for GPU pipeline)
pyarrow = ">=14.0.0"                 # Columnar data format (required by LanceDB)

# ── UI ─────────────────────────────────────────────────────────────────────────
streamlit = ">=1.30.0"               # Interactive demo app
plotly = ">=5.18.0"                  # Charts and visualizations
pandas = ">=2.1.0"                   # Data manipulation

# ── Document parsing ──────────────────────────────────────────────────────────
pymupdf = ">=1.23.0"                 # PDF text extraction
azure-storage-blob = "^12.28.0"
fastapi = "^0.135.3"
uvicorn = "^0.42.0"

# ── KeyBERT + ARM + nupunkt integration ──────────────────────────────────────
nupunkt = {version = ">=0.6.0", python = ">=3.11"}  # Legal-text-aware sentence tokenization
keybert = ">=0.8.0"                  # Keyphrase extraction for clause fingerprinting
mlxtend = ">=0.23.0"                 # FP-Growth association rule mining

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
